startplasma: Sort environment scripts prior to sourcing

Summary:
Sort environment scripts before they are sourced. User scripts should run after system scripts to ensure that user preferences take precendence over system defaults. Scripts in each location (user and system) are then separately sorted in lexical order to ensure deterministic source order.

BUG: 420085
FIXED-IN: 5.19.0

Reviewers: #plasma, davidedmundson, apol

Reviewed By: apol

Subscribers: cfeck, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28941